fix: slideshow arrows not showing in mobile

--- a/assets/custom-frete.css
+++ b/assets/custom-frete.css
@@ -13,3 +13,11 @@ motion-element { opacity: 1 !important; }
 /* e só aplique opacity:0 quando JS marcar que está animando */
 motion-element[data-motion-init="true"] { opacity: 0!important; }
 motion-element[data-motion-init="true"].is-visible { opacity: 1!important; }
+
+
+@media screen and (max-width: 767.98px) {
+  .swiper-actions:not(.show-on-mobile) {
+    display: block !important;
+    margin: auto !important;
+  }
+}
