--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,11 +1,3 @@
-@media screen and (max-width: 767.98px) {
-  .swiper-actions:not(.show-on-mobile) {
-    display: block !important;
-    margin: auto !important;
-  }
-}
-
-
 .installment-payment {
   width: 100%;
 }
